methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:1: error: not found: type boolean
def haveBaggle():Boolean = {var seenBaggle:boolean=false; 
                                           ^